<resources>
    <string name="app_name">loginpage_1</string>
    <string name="login">Log in</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="forget_password">forget password?</string>
    <string name="LOg_in_with">Log in with</string>
    <string name="Remember_Me">Remember Me?</string>
    <string name="Google">Google</string>
    <string name="New_User">New User ? Create account</string>
    <string name="Log_in_with_your_account">Log in with your account</string>


</resources>